--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beauty Nails | Tech-24233</title>
+    <link rel="icon" href="/assets/img/flaticon.png" type="png">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Google Fonts-->
@@ -11,12 +12,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!--Font-awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <nav class="row row-navbar">
+    <div class="container sticky-nav">
+        <nav class="row he-nav d-flex align-content-center">
             <div class="col">
                 <div class="navbar-br">
                     <span>BeautyNails</span>
@@ -31,96 +32,146 @@
                 </ul>
             </div>
         </nav>
-        <main>
-            <header class="row">
-                <div class="col col-header">
-                    <div class="header-text">
-                        <h1>Elevate your <br>nails & shine</h1>
-                        <p>For beautiful nails, you've come to the right place</p>
-                        <div class="cta">
-                            <span>Book appointment</span>
-                            <div class="cta-arrow">
-                                <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
-                            </div>
+    </div>
+    <div class="container">
+        <div class="row d-flex align-content-center cont-height-1">
+            <div class="col">
+                <div class="header-text">
+                    <h1>Elevate your <br>nails & shine</h1>
+                    <p>For beautiful nails, you've come to the right place</p>
+                    <button href="/" class="cta d-flex justify-content-center align-items-center gap-1">
+                        <span>Book appointment</span>
+                        <div class="cta-arrow d-flex justify-content-center align-items-center">
+                            <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
                         </div>
-                    </div>
-                    <div class="header-img">
-                        <img src="/assets/img/header-img.png">
-                    </div>
+                    </button>
                 </div>
-            </header>
-            <section class="row" id="services">
-                <div class="col col-services">
-                    <h2 class="services-title">Featured Treatments</h2>
-                    <div class="srv-flex">
-                        <div class="cards-flex">
-                            <div class="cards-text">
-                                <div>
-                                    <img src="/assets/img/section-2-01.png">
-                                </div>
-                                <div class="cards-text-flex">
-                                    <h3>Combi Manicure</h3>
-                                    <p>The electric file removes dead skin from the cuticle for a super sleek end result</p>
-                                </div>
-                            </div>
-                            <div>
-                                <span class="services-btn">View Details</span>
-                            </div>
-                        </div>
-                        <div class="cards-flex">
-                            <div class="cards-text">
-                                <div>
-                                    <img src="/assets/img/section-2-02.png">
-                                </div>
-                                <div class="cards-text-flex">
-                                    <h3>Powegel & Gelpolish</h3>
-                                    <p>Natural nail is strengthened with a building gel + gel polish color of your choice</p>
-                                </div>
-                            </div>
-                            <div>
-                                <span class="services-btn">View Details</span>
-                            </div>
-                        </div>
-                        <div class="cards-flex">
-                            <div class="cards-text">
-                                <div>
-                                    <img src="/assets/img/section-2-03.png">
-                                </div>
-                                <div class="cards-text-flex">
-                                    <h3>Nailart</h3>
-                                    <p>Want to stand out even more with beautiful nail art on your nails?</p>
-                                </div>
-                                
-                            </div>
-                            <div>
-                                <span class="services-btn">View Details</span>
-                            </div>
-                        </div>
-                        <div class="cards-flex">
-                            <div class="cards-text">
-                                <div>
-                                    <img src="/assets/img/section-2-04.png">
-                                </div>
-                                <div class="cards-text-flex">
-                                    <h3>Toenails</h3>
-                                    <p>Your toenails painted in a Gel polish of your choice (including foot bubble bath)</p>
-                                </div>
-                                
-                            </div>
-                            <div>
-                                <span class="services-btn">View Details</span>
-                            </div>
-                        </div>
-                    </div>
+            </div>
+            <div class="col">
+                <div class="header-img d-flex justify-content-center align-items-center">
+                    <img src="/assets/img/header-img.png">
                 </div>
-            </section>
-        </main>
-        <footer>
-        </footer>
-        <div class="btn-arrow">
-            <img src="/assets/img/btn-arrow.png">
+            </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row d-flex align-content-center cont-height-2" id="services">
+            <div class="col col-services d-flex justify-content-around flex-column">
+                <h2 class="services-title">Featured Treatments</h2>
+                <div class="srv-flex d-flex justify-content-between">
+                    <div class="cards-flex d-flex flex-column justify-content-between">
+                        <div class="cards-text d-flex flex-column align-items-center gap-2"> <!--copiar-->
+                            <div>
+                                <img src="/assets/img/section-2-01.png">
+                            </div>
+                            <div class="cards-text-flex">
+                                <h3>Combi Manicure</h3>
+                                <p>The electric file removes dead skin from the cuticle for a super sleek end result</p>
+                            </div>
+                        </div>
+                        <div>
+                            <span class="services-btn">View Details</span>
+                        </div>
+                    </div>
+                    <div class="cards-flex d-flex flex-column justify-content-between">
+                        <div class="cards-text d-flex flex-column align-items-center gap-2">
+                            <div>
+                                <img src="/assets/img/section-2-02.png">
+                            </div>
+                            <div class="cards-text-flex">
+                                <h3>Powegel & Gelpolish</h3>
+                                <p>Natural nail is strengthened with a building gel + gel polish color of your choice</p>
+                            </div>
+                        </div>
+                        <div>
+                            <span class="services-btn">View Details</span>
+                        </div>
+                    </div>
+                    <div class="cards-flex d-flex flex-column justify-content-between">
+                        <div class="cards-text d-flex flex-column align-items-center gap-2">
+                            <div>
+                                <img src="/assets/img/section-2-03.png">
+                            </div>
+                            <div class="cards-text-flex">
+                                <h3>Nailart</h3>
+                                <p>Want to stand out even more with beautiful nail art on your nails?</p>
+                            </div>           
+                        </div>
+                        <div>
+                            <span class="services-btn">View Details</span>
+                        </div>
+                    </div>
+                    <div class="cards-flex d-flex flex-column justify-content-between">
+                        <div class="cards-text d-flex flex-column align-items-center gap-2">
+                            <div>
+                                <img src="/assets/img/section-2-04.png">
+                            </div>
+                            <div class="cards-text-flex">
+                                <h3>Toenails</h3>
+                                <p>Your toenails painted in a Gel polish of your choice (including foot bubble bath)</p>
+                            </div>            
+                        </div>
+                        <div>
+                            <span class="services-btn">View Details</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container cont-height-3">
+        <div class="row d-flex align-items-center">
+            <div class="col">
+                <div>
+                    <img src="assets/img/products.png"> 
+                </div>
+            </div>
+            <div class="col">
+                <div class="prod-text">
+                    <h3>The  best quality a-branded products</h3>
+                    <p>Experience Unmatched Nail Care with Our Selection of Top-Quality A-Branded Products.<br>
+                    At Nail318, we exclusively use <span class="bold"><b>premium brands</b></span> to ensure your nails receive the best treatment and care available.</p>
+                    <button class="cta-2 d-flex justify-content-center align-items-center gap-1">
+                        <span>See more</span>
+                        <div class="cta-arrow d-flex justify-content-center align-items-center">
+                            <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
+                        </div>
+                    </button>
+                    <div class="d-flex justify-content-end">
+                        <img src="./assets/img/btn-products.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row d-flex align-items-center">
+            <div class="col">
+                <div>
+                    <img src="/assets/img/pic-profile.png">
+                </div>
+            </div>
+            <div class="col">
+                <div class="about-text d-flex flex-column gap-3">
+                    <h3>I’m Sarah,</h3>
+                    <h4>Your nailstylist</h4>
+                    <p>With over three years of experience in the industry, I am certified by <b>Magnetic</b>
+                        and have accumulated more than 15 professional education certificates along
+                        with over 20 course participation certificates.</p>
+                    <button class="cta-3 d-flex justify-content-center align-items-center gap-1">
+                        <span>More about</span>
+                        <div class="cta-arrow d-flex justify-content-center align-items-center">
+                            <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
+                        </div>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <a href="/" class="btn-arrow d-flex justify-content-end">
+        <img src="/assets/img/btn-arrow.png">
+    </a>
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
