--- a/index.html
+++ b/index.html
@@ -236,10 +236,77 @@
                 </div>
             </div>
         </div>
-        <div class="container cont-height-6" id="testimonials">
+        <div class="container cont-height-6 d-flex flex-column justify-content-center align-items-center" id="testimonials">
             <div class="row">
                 <div class="col">
-
+                    <div id="carouselExampleFade" class="carousel slide">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="d-flex justify-content-center">
+                                    <div class="testimonial"> 
+                                        <div>
+                                            <p class="test-text">“Just had the most relaxing manicure. My nails feel rejuvenated and look gorgeous!”</p>
+                                        </div>
+                                        <div class="d-flex gap-2 justify-content-center align-items-center">
+                                            <div>
+                                                <img src="/assets/img/test-icon.png">
+                                            </div>
+                                            <div>
+                                                <p class="test-client"><b>Laura</b>- 3 days ago</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="d-flex justify-content-center">
+                                    <div class="testimonial"> 
+                                        <div>
+                                            <p class="test-text">“Lovely session getting my nails done. And the nail art is stunning!”</p>
+                                        </div>
+                                        <div class="d-flex gap-2 justify-content-center align-items-center">
+                                            <div>
+                                                <img src="/assets/img/test-icon.png">
+                                            </div>
+                                            <div>
+                                                <p class="test-client"><b>Emily</b>- 5 days ago</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="d-flex justify-content-center">
+                                    <div class="testimonial"> 
+                                        <div>
+                                            <p class="test-text">“Had a great time at the nail salon today. The new gel polish looks fabulous!”</p>
+                                        </div>
+                                        <div class="d-flex gap-2 justify-content-center align-items-center">
+                                            <div>
+                                                <img src="/assets/img/test-icon.png">
+                                            </div>
+                                            <div>
+                                                <p class="test-client"><b>Jessica</b> - 3 days ago</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+    
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                            <div class="circle-icon">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </div>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                            <div class="circle-icon">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </div>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
