--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             </div>
         </div>
     </header>
-    <!-------
     <main>
-        <div class="container">
-            <div class="row d-flex align-content-center cont-height-2" id="services">
+        <!-----Services---->
+        <div class="container cont-height-2 d-flex align-items-center justify-content-center" id="services">
+            <div class="row d-flex align-content-center">
                 <div class="col col-services d-flex justify-content-around flex-column">
                     <h2 class="services-title">Featured Treatments</h2>
-                    <div class="srv-flex d-flex justify-content-between">
+                    <div class="srv-flex">
                         <div class="cards-flex d-flex flex-column justify-content-between">
                             <div class="cards-text d-flex flex-column align-items-center gap-2">
                                 <div>
@@ -156,31 +156,37 @@
                 </div>
             </div>
         </div>
-        <div class="container cont-height-3 d-flex flex-column justify-content-center" id="products">
-            <div class="row d-flex align-items-center">
+        <!-----Products---->
+        <div class="container cont-height-3 d-flex flex-column justify-content-center align-items-center" id="products">
+            <div class="row prod-f">
                 <div class="col">
                     <div class="img-resp">
                         <img src="assets/img/products.png"> 
                     </div>
                 </div>
                 <div class="col">
-                    <div class="prod-text">
-                        <h3>The  best quality a-branded products</h3>
-                        <p>Experience Unmatched Nail Care with Our Selection of Top-Quality A-Branded Products.<br>
-                        At BeautyNails, we exclusively use <span class="bold"><b>premium brands</b></span> to ensure your nails receive the best treatment and care available.</p>
+                    <div class="padding-prod">
+                        <div class="prod-text">
+                            <h3>The  best quality a-branded products</h3>
+                            <p>Experience Unmatched Nail Care with Our Selection of Top-Quality A-Branded Products.<br>
+                                At BeautyNails, we exclusively use <span class="bold"><b>premium brands</b></span> to ensure your nails receive the best treatment and care available.</p>
+                        </div>
                         <button class="cta-2 d-flex justify-content-center align-items-center gap-1">
                             <span>See more</span>
                             <div class="cta-arrow d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
                             </div>
                         </button>
-                        <div class="d-flex justify-content-end">
+                        <div class="img-star-prod">
                             <img src="./assets/img/btn-products.png">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-----About-me---->
+
+        <!-------
         <div class="container cont-about" id="about">
             <div class="row d-flex align-items-center">
                 <div class="col">
