--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-----Services---->
         <div class="container cont-height-2 d-flex align-items-center justify-content-center" id="services">
             <div class="row d-flex align-content-center">
-                <div class="col col-services d-flex justify-content-around flex-column">
+                <div class="col d-flex justify-content-around flex-column">
                     <h2 class="services-title">Featured Treatments</h2>
                     <div class="srv-flex">
                         <div class="cards-flex d-flex flex-column justify-content-between">
@@ -185,13 +185,11 @@
             </div>
         </div>
         <!-----About-me---->
-
-        <!-------
         <div class="container cont-about" id="about">
-            <div class="row d-flex align-items-center">
+            <div class="row about-flex">
                 <div class="col">
                     <div class="img-resp">
-                        <img src="/assets/img/pic-profile.png">
+                        <img src="/assets/img/pic-profile.png" alt="pic profile">
                     </div>
                 </div>
                 <div class="col">
@@ -211,6 +209,7 @@
                 </div>
             </div>
         </div>
+        <!-----About----> 
         <div class="container-fluid">
             <div class="row cont-height-4">
                 <div class="col d-flex justify-content-center align-items-center">
@@ -221,6 +220,7 @@
                 </div>
             </div>
         </div>
+        <!-----Quality--->
         <div class="container-fluid">
             <div class="row cont-height-5">
                 <div class="col-lg-5 d-flex justify-content-center align-items-center">
@@ -278,6 +278,7 @@
                 </div>
             </div>
         </div>
+        <!-------
         <div class="container cont-height-6 d-flex flex-column justify-content-center align-items-center" id="testimonials">
             <div class="row">
                 <div class="col">
