testimonials footer & appointment responsive

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body id="home">
     <header>
         <!-----Nav---->
-        <div class="container-fluid  sticky-nav">
+        <div class="container-fluid sticky-nav">
             <div class="row he-nav d-flex justify-items-between">
                 <div class="col d-flex align-items-center">
                     <div class="navbar-br">
@@ -278,7 +278,7 @@
                 </div>
             </div>
         </div>
-        <!-------
+        <!-----Testimonials--->
         <div class="container cont-height-6 d-flex flex-column justify-content-center align-items-center" id="testimonials">
             <div class="row">
                 <div class="col">
@@ -352,6 +352,7 @@
                 </div>
             </div>
         </div>
+        <!----Appointment----->
         <div class="container-fluid bg-appo d-flex justify-content-center align-items-center">
             <div class="row">
                 <div class="col">
@@ -369,18 +370,19 @@
             </div>
         </div>
     </main>
-    <footer class="container-fluid foo-cont d-flex flex-column justify-content-evenly align-items-center" id="contact">
+    <!-----Footer---->
+    <footer class="container-fluid foo-cont d-flex flex-column justify-content-between align-items-center" id="contact">
         <div class="row wd-90">
             <div class="col">
                 <div>
-                    <h2 class="logo-foo">BeautyNails Nail Studio Veenendaal</h2>
+                    <h2 class="logo-foo">BeautyNails</h2>
                 </div>
-            </div>
-            <div class="col">
-                <a href="#home" class="d-flex justify-content-end">
+                <a href="#home" class="d-flex justify-content-start">
                     <img src="./assets/img/btn-to-top.png">
                 </a> 
-                <div class="d-flex justify-content-between gap-5">
+            </div>
+            <div class="col">
+                <div class="ul-flex">
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">links</li>
                         <li class="light-footer op"><a href="#services">services</a></li>
@@ -407,12 +409,11 @@
             </div>
         </div>
     </footer>
-    ------>
-
-    <!--Button to bottom--
+    
+    <!--Button to bottom---->
     <a href="#contact" class="btn-arrow d-flex justify-content-end">
         <img src="/assets/img/btn-arrow.png">
-    </a>-->
+    </a>
     
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
