--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beauty Nails | Tech-24233</title>
-    <link rel="icon" href="./assets/img/flaticon.png" type="png">
+    <link rel="icon" href="./assets/img/flaticon.png">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Google Fonts-->
@@ -49,7 +49,6 @@
                     </div>
                 </div>
             </div>
-            
         </div>
     
         <!--------Home------>
@@ -59,7 +58,7 @@
                     <div class="header-text">
                         <h1>Elevate your <br>nails & shine</h1>
                         <p>For beautiful nails, you've come to the right place</p>
-                        <button href="/" class="cta d-flex justify-content-center align-items-center gap-1" data-bs-toggle="modal" data-bs-target="#exampleModal" >
+                        <button class="cta d-flex justify-content-center align-items-center gap-1" data-bs-toggle="modal" data-bs-target="#exampleModal" >
                             <span>Book appointment</span>
                             <div class="cta-arrow d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
@@ -109,7 +108,6 @@
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -203,7 +201,7 @@
                                 <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
                             </div>
                         </button>
-                        <div class="img-star-prod">
+                        <div class="img-star-prod img-resp">
                             <img src="./assets/img/btn-products.png" alt="Promo Nail oil & cuticle cream free">
                         </div>
                     </div>
@@ -308,7 +306,7 @@
         <div class="container cont-height-6 d-flex flex-column justify-content-center align-items-center" id="testimonials">
             <div class="row">
                 <div class="col">
-                    <div id="carouselExampleFade" class="carousel slide">
+                    <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <div class="d-flex justify-content-center">
