--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     </div>
                 </div>
             </div>
+        </div>
             <!-- Modal -->
         <form
             action="https://formspree.io/f/xnnqqbzo"
