--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h1>Elevate your <br>nails & shine</h1>
                         <p>For beautiful nails, you've come to the right place</p>
                         <button class="cta d-flex justify-content-center align-items-center gap-1" data-bs-toggle="modal" data-bs-target="#exampleModal" >
-                            <span>Book appointment</span>
+                            <span>Contact us</span>
                             <div class="cta-arrow d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
                             </div>
@@ -82,7 +82,7 @@
                 <div class="modal-dialog modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Book appointment</h1>
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Get in touch</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -196,12 +196,12 @@
                             <p>Experience Unmatched Nail Care with Our Selection of Top-Quality A-Branded Products.<br>
                                 At BeautyNails, we exclusively use <span class="bold"><b>premium brands</b></span> to ensure your nails receive the best treatment and care available.</p>
                         </div>
-                        <button class="cta-2 d-flex justify-content-center align-items-center gap-1">
+                        <a href="./pages/gallery.html" class="cta-2 d-flex justify-content-center align-items-center gap-1" role="button">
                             <span>See more</span>
                             <div class="cta-arrow d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
                             </div>
-                        </button>
+                        </a>                  
                         <div class="img-star-prod img-resp">
                             <img src="./assets/img/btn-products.png" alt="Promo Nail oil & cuticle cream free">
                         </div>
@@ -385,7 +385,7 @@
                         <h2>Shine like never before</h2>
                         <p>We like to take the time to make your hands shine</p>
                         <button href="/" class="cta d-flex justify-content-center align-items-center gap-1" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <span>Book appointment</span>
+                            <span>Contact us</span>
                             <div class="cta-arrow d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
                             </div>
