--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
                         <p>With over three years of experience in the industry, I am certified by <b>Magnetic</b>
                             and have accumulated more than 15 professional education certificates along
                             with over 20 course participation certificates.</p>
-                        <button class="cta-3 d-flex justify-content-center align-items-center gap-1">
+                        <a href="./pages/about-me.html" class="cta-3 d-flex justify-content-center align-items-center gap-1">
                             <span>More about</span>
                             <div class="cta-arrow d-flex justify-content-center align-items-center">
                                 <i class="fa-solid fa-arrow-right-long" style="color:#FFFFFF;"></i>
                             </div>
-                        </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -402,9 +402,6 @@
                 <div>
                     <h2 class="logo-foo">BeautyNails</h2>
                 </div>
-                <a href="#home" class="d-flex justify-content-start">
-                    <img src="./assets/img/btn-to-top.png" alt="Button to top">
-                </a> 
             </div>
             <div class="col">
                 <div class="ul-flex">
@@ -416,6 +413,8 @@
                     <ul class="d-flex gap-3 flex-column">
                         <li class="bold-footer">about</li>
                         <li class="light-footer op"><a href="#testimonials">testimonials</a></li>
+                        <li class="light-footer op"><a href="#about">about</a></li>
+
                     </ul>
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">contact</li>
