--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -27,7 +27,7 @@
         <div class="row he-nav d-flex justify-items-between">
             <div class="col d-flex align-items-center">
                 <div class="navbar-br">
-                    <a href="#home">BeautyNails</a>
+                    <a href="../index.html">BeautyNails</a>
                 </div>
             </div>
             <div class="col d-flex align-items-center justify-content-end">
@@ -36,10 +36,10 @@
                 </div>
                 <div class="nav-block">
                     <ul class="d-flex justify-content-between nav-ul">
-                        <li class="op"><a href="#services">services</a></li>
-                        <li class="op"><a href="#testimonials">testimonials</a></li>
-                        <li class="op"><a href="#about">about</a></li>
-                        <li class="op"><a href="#contact">contact</a></li>
+                        <li class="op"><a href="../index.html">services</a></li>
+                        <li class="op"><a href="../index.html">testimonials</a></li>
+                        <li class="op"><a href="../index.html">about</a></li>
+                        <li class="op"><a href="../index.html">contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -89,7 +89,7 @@
         <div class="row wd-90">
             <div class="col">
                 <div>
-                    <h2 class="logo-foo">BeautyNails</h2>
+                    <a href="../index.html" class="logo-foo">BeautyNails</a>
                 </div> 
             </div>
             <div class="col">
@@ -102,6 +102,8 @@
                     <ul class="d-flex gap-3 flex-column">
                         <li class="bold-footer">about</li>
                         <li class="light-footer op"><a href="../index.html">testimonials</a></li>
+                        <li class="light-footer op"><a href="../pages/about-me.html">about</a></li>
+
                     </ul>
                     <ul class="d-flex gap-3 flex-column ul-foo">
                         <li class="bold-footer">contact</li>
